--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "connect": "1.8.7",
     "express": "2.5.8",
     "jqtpl": ">= 0.0.1",
     "jake": ">= 0.2.32",
     "minimatch": ">= 0.2.4",
     "mongoose": ">= 2.5.13",
-    "connect-mongo": ">= 0.1.7",
+    "connect-mongo": "0.1.7",
     "nodemailer": ">= 0.3.20"
   }
 }
