--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "minimatch": ">= 0.2.4",
     "mongoose": ">= 2.5.13",
     "connect-mongo": "0.1.7",
-    "nodemailer": ">= 0.3.20"
+    "nodemailer": ">= 0.3.20",
+    "jQuery": ">= 1.6.0",
+    "jsdom": ">= 0.2.13",
+    "xmlhttprequest": ">= 1.3.0"
   }
 }
