--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.2.6",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "marked": "0.2.9",
+    "mongodb": "1.3.10"
   }
 }
