--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "stylus": "*",
     "marked": "0.2.9",
-    "mongodb": "1.3.10"
+    "mongodb": "1.3.10",
+    "mandrill-api": ">=1.0.2"
   }
 }
