--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.2.6",
-    "jade": "*",
-    "stylus": "*",
-    "marked": "0.2.9",
-    "mongodb": "1.3.10",
+    "express": "4.7.2",
+    "jade": "1.5.0",
+    "stylus": "0.47.3",
+    "marked": "0.3.2",
+    "mongodb": "1.4.8",
     "mandrill-api": ">=1.0.2",
-    "bcrypt": "0.7.6",
-    "express-csv": "0.6.0"
+    "bcrypt": "0.7.8",
+    "express-csv": "0.6.0",
+    "errorhandler": "1.1.x",
+    "basic-auth-connect": "1.0.x",
+    "morgan": "1.2.x",
+    "body-parser": "1.5.2"
   },
   "engines": {
       "node": "0.10.x"
