--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "lm-nominations",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
+  "name":"lm-nominations",
+  "version":"1.0.0",
+  "private":true,
+  "scripts":{
+    "start":"node app.js"
   },
-  "dependencies": {
-    "express": "4.7.2",
-    "jade": "1.5.0",
-    "stylus": "0.47.3",
-    "marked": "0.3.2",
-    "mongodb": "1.4.8",
-    "mandrill-api": ">=1.0.2",
-    "bcrypt": "0.7.8",
-    "express-csv": "0.6.0",
-    "errorhandler": "1.1.x",
-    "basic-auth-connect": "1.0.x",
-    "morgan": "1.2.x",
-    "body-parser": "1.5.2"
+  "dependencies":{
+    "body-parser":"1.6.3",
+    "jade":"1.5.0",
+    "marked":"0.3.2",
+    "basic-auth-connect":"1.0.0",
+    "morgan":"1.2.2",
+    "mandrill-api":"1.0.40",
+    "errorhandler":"1.1.1",
+    "bcrypt":"0.8.0",
+    "express":"4.8.3",
+    "mongodb":"1.4.8",
+    "express-csv":"0.6.0",
+    "stylus":"0.47.3"
   },
-  "engines": {
-      "node": "0.10.x"
+  "engines":{
+    "node":"0.10.x"
   }
 }
