--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "lm-nominations",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "4.13.1",
+    "express": "4.14.0",
     "jade": "1.11.0",
-    "stylus": "0.52.0",
-    "marked": "0.3.3",
-    "mongodb": "2.0.39",
-    "mandrill-api": "1.0.45",
-    "bcrypt": "0.8.3",
+    "stylus": "0.54.5",
+    "marked": "0.3.5",
+    "mongodb": "2.2.5",
+    "bcrypt": "0.8.7",
     "express-csv": "0.6.0",
-    "errorhandler": "1.4.1",
+    "errorhandler": "1.4.3",
     "basic-auth-connect": "1.0.0",
-    "morgan": "1.6.1",
-    "body-parser": "1.13.2"
+    "morgan": "1.7.0",
+    "body-parser": "1.15.2",
+    "mailgun": "0.5.0"
   },
   "engines": {
-      "node": "0.10.x"
+      "node": "6.3.x"
   }
 }
