--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "4.14.0",
     "jade": "1.11.0",
+    "jstransformer-marked": "1.0.1",
     "stylus": "0.54.5",
     "marked": "0.3.5",
     "mongodb": "2.2.5",
