--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "4.16.3",
-    "jade": "1.11.0",
-    "jstransformer-marked": "1.0.3",
-    "stylus": "0.54.5",
-    "marked": "0.4.0",
-    "mongodb": "3.1.1",
-    "bcrypt": "1.0.3",
-    "express-csv": "0.6.0",
-    "errorhandler": "1.5.0",
     "basic-auth-connect": "1.0.0",
-    "morgan": "1.9.0",
+    "bcrypt": "1.0.3",
     "body-parser": "1.18.3",
+    "errorhandler": "1.5.0",
+    "express": "4.16.3",
+    "express-csv": "0.6.0",
+    "pug": "2.0.4",
+    "jstransformer-marked": "1.0.3",
+    "mailcomposer": "4.0.2",
     "mailgun": "0.5.0",
-    "mailcomposer": "4.0.2"
+    "marked": "0.6.3",
+    "mongodb": "3.1.1",
+    "morgan": "^1.9.1",
+    "stylus": "0.54.5"
   },
   "engines": {
-      "node": "8.11.x"
+    "node": "12.x"
   }
 }
